--- a/variable histograms+chi-square value.ipynb
+++ b/variable histograms+chi-square value.ipynb
@@ -944,7 +944,8 @@
    "outputs": [],
    "source": [
     "flagsOut = flagsOut.drop('Area', axis = 1)\n",
-    "flagsOut = flagsOut.drop('Population', axis = 1)"
+    "flagsOut = flagsOut.drop('Population', axis = 1)\n",
+    "np.argmax(rlgnTest, axis=1)"
    ]
   },
   {
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "0116b033",
    "metadata": {},
    "outputs": [
@@ -1072,52 +1073,52 @@
     {
      "data": {
       "text/plain": [
-       "[0.45867466920597816,\n",
-       " 0.6467846854273894,\n",
-       " 1.0412099728228763,\n",
-       " 1.1782057846573968,\n",
-       " 2.3525641025641013,\n",
-       " 3.0538675732611367,\n",
-       " 3.7201845349706963,\n",
-       " 3.89897389381406,\n",
-       " 4.542857142857142,\n",
-       " 4.705128205128203,\n",
-       " 4.705128205128203,\n",
-       " 4.795434676570964,\n",
-       " 4.87854122647734,\n",
-       " 5.86213585342717,\n",
-       " 6.171176848530995,\n",
-       " 6.186786476377157,\n",
-       " 6.775047860335193,\n",
-       " 7.057073306990291,\n",
-       " 7.948717948717945,\n",
-       " 8.329587142004417,\n",
-       " 8.429758551706689,\n",
-       " 8.79481391032956,\n",
-       " 8.984130630710942,\n",
-       " 9.626210826210821,\n",
-       " 9.653354937193829,\n",
-       " 11.258695262796856,\n",
-       " 13.367306465408925,\n",
-       " 13.913527164381057,\n",
-       " 15.371399827946334,\n",
-       " 15.929311911660822,\n",
-       " 16.168404492408285,\n",
-       " 16.389287177289862,\n",
-       " 16.585081585081575,\n",
-       " 16.999790360037046,\n",
-       " 21.867274676620013,\n",
-       " 23.0590266494076,\n",
-       " 23.173795730322592,\n",
-       " 23.550907482013947,\n",
-       " 24.89903621836733,\n",
-       " 26.115750429203928,\n",
-       " 28.616663892171196,\n",
+       "[169.5854202258173,\n",
        " 32.214031024320406,\n",
-       " 169.5854202258173]"
+       " 28.616663892171196,\n",
+       " 26.115750429203928,\n",
+       " 24.89903621836733,\n",
+       " 23.550907482013947,\n",
+       " 23.173795730322592,\n",
+       " 23.0590266494076,\n",
+       " 21.867274676620013,\n",
+       " 16.999790360037046,\n",
+       " 16.585081585081575,\n",
+       " 16.389287177289862,\n",
+       " 16.168404492408285,\n",
+       " 15.929311911660822,\n",
+       " 15.371399827946334,\n",
+       " 13.913527164381057,\n",
+       " 13.367306465408925,\n",
+       " 11.258695262796856,\n",
+       " 9.653354937193829,\n",
+       " 9.626210826210821,\n",
+       " 8.984130630710942,\n",
+       " 8.79481391032956,\n",
+       " 8.429758551706689,\n",
+       " 8.329587142004417,\n",
+       " 7.948717948717945,\n",
+       " 7.057073306990291,\n",
+       " 6.775047860335193,\n",
+       " 6.186786476377157,\n",
+       " 6.171176848530995,\n",
+       " 5.86213585342717,\n",
+       " 4.87854122647734,\n",
+       " 4.795434676570964,\n",
+       " 4.705128205128203,\n",
+       " 4.705128205128203,\n",
+       " 4.542857142857142,\n",
+       " 3.89897389381406,\n",
+       " 3.7201845349706963,\n",
+       " 3.0538675732611367,\n",
+       " 2.3525641025641013,\n",
+       " 1.1782057846573968,\n",
+       " 1.0412099728228763,\n",
+       " 0.6467846854273894,\n",
+       " 0.45867466920597816]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,12 +1130,71 @@
     "fs.fit(flagsOut, land)\n",
     "for i in range(len(fs.scores_)):\n",
     "    print('Feature %d: %f' % (i, fs.scores_[i]))\n",
-    "sorted(fs.scores_)"
+    "sorted(fs.scores_,reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "345aeecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "flagsTrain, flagsTest, landTrain, landTest = train_test_split(flagsScaled, land, test_size = 0.20, random_state=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5287af22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.optimizers import SGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "ee6bac9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "model = MLPClassifier(solver = 'sgd', random_state = 5, activation = 'logistic', learning_rate_init = 0.3, \n",
+    "                      batch_size = 100, hidden_layer_sizes = (5, 3), max_iter = 500).fit(flagsScaled, land)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "d8628e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train MSE:  0.06021505376344086 Accuracy:  0.7096774193548387\n",
+      "Test MSE:  0.04700854700854701 Accuracy:  0.7692307692307693\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "pred_train = model.predict(flagsTrain)\n",
+    "print('Train MSE: ',mean_squared_error(landTrain, pred_train),'Accuracy: ',model.score(flagsTrain,landTrain))\n",
+    "pred_test = model.predict(flagsTest)\n",
+    "print('Test MSE: ',mean_squared_error(landTest, pred_test),'Accuracy: ',model.score(flagsTest,landTest))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a435ab0",
+   "id": "39477d77",
    "metadata": {},
    "source": [
     "## Top5 features related to Landmass: 14, 36, 1, 31, 0"
@@ -1256,8 +1316,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "bb759a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flagsTrain, flagsTest, langTrain, langTest = train_test_split(flagsScaled, lang, test_size = 0.20, random_state=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "c763d99e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train MSE:  0.03247422680412371 Accuracy:  0.7061855670103093\n",
+      "Test MSE:  0.023076923076923075 Accuracy:  0.7692307692307693\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MLPClassifier(solver = 'sgd', random_state = 5, activation = 'logistic', learning_rate_init = 0.3, \n",
+    "                      batch_size = 100, hidden_layer_sizes = (10, 3), max_iter = 1000).fit(flagsScaled, lang)\n",
+    "pred_train = model.predict(flagsScaled)\n",
+    "print('Train MSE: ',mean_squared_error(lang, pred_train),'Accuracy: ',model.score(flagsScaled,lang))\n",
+    "pred_test = model.predict(flagsTest)\n",
+    "print('Test MSE: ',mean_squared_error(langTest, pred_test),'Accuracy: ',model.score(flagsTest,langTest))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e8b58fde",
+   "id": "0c927aeb",
    "metadata": {},
    "source": [
     "## Top5 features related to Language: 14, 0, 1, 27, 12"
@@ -1379,8 +1473,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "c0c648bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train MSE:  0.030283505154639175 Accuracy:  0.7680412371134021\n",
+      "Test MSE:  0.02564102564102564 Accuracy:  0.7948717948717948\n"
+     ]
+    }
+   ],
+   "source": [
+    "flagsTrain, flagsTest, rlgnTrain, rlgnTest = train_test_split(flagsScaled, rlgn, test_size = 0.20, random_state=5)\n",
+    "model = MLPClassifier(solver = 'sgd', random_state = 5, activation = 'logistic', learning_rate_init = 0.3, \n",
+    "                      batch_size = 100, hidden_layer_sizes = (8, 3), max_iter = 500).fit(flagsScaled, rlgn)\n",
+    "pred_train = model.predict(flagsScaled)\n",
+    "print('Train MSE: ',mean_squared_error(rlgn, pred_train),'Accuracy: ',model.score(flagsScaled,rlgn))\n",
+    "pred_test = model.predict(flagsTest)\n",
+    "print('Test MSE: ',mean_squared_error(rlgnTest, pred_test),'Accuracy: ',model.score(flagsTest,rlgnTest))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "3f11dc05",
+   "id": "c50bc745",
    "metadata": {},
    "source": [
     "## Top5 features related to Religion: 14, 11, 1, 12, 15"
@@ -1389,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b4e5a2cf",
+   "id": "624a5c6d",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f9a19248",
+   "id": "7ad87e29",
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b2cb843d",
+   "id": "88d44707",
    "metadata": {},
    "outputs": [
     {
@@ -15677,8 +15796,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8b0091d0",
+   "execution_count": 139,
+   "id": "393cd63c",
    "metadata": {},
    "outputs": [
     {
@@ -15723,8 +15842,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5bfc603e",
+   "execution_count": 147,
+   "id": "25697f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##### SVC with linear kernel #####\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.90      1.00      0.95         9\n",
+      "           2       1.00      0.50      0.67         2\n",
+      "           3       1.00      0.89      0.94         9\n",
+      "           4       0.91      0.91      0.91        11\n",
+      "           5       0.80      1.00      0.89         4\n",
+      "           6       1.00      1.00      1.00         4\n",
+      "\n",
+      "    accuracy                           0.92        39\n",
+      "   macro avg       0.93      0.88      0.89        39\n",
+      "weighted avg       0.93      0.92      0.92        39\n",
+      " \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('##### SVC with linear kernel #####')\n",
+    "print(classification_report(np.argmax(landTest, axis=1)+1, clf.predict(flagsTest)), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "7301c729",
    "metadata": {},
    "outputs": [
     {
@@ -15767,8 +15919,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ae2afba9",
+   "execution_count": 152,
+   "id": "5cc8c008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##### SVC with linear kernel #####\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       1.00      1.00      1.00        12\n",
+      "           2       1.00      0.75      0.86         4\n",
+      "           3       0.00      0.00      0.00         2\n",
+      "           4       1.00      1.00      1.00         1\n",
+      "           5       1.00      1.00      1.00         3\n",
+      "           6       1.00      0.83      0.91         6\n",
+      "           8       0.67      1.00      0.80         2\n",
+      "          10       0.90      1.00      0.95         9\n",
+      "\n",
+      "    accuracy                           0.90        39\n",
+      "   macro avg       0.82      0.82      0.81        39\n",
+      "weighted avg       0.91      0.90      0.90        39\n",
+      " \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('##### SVC with linear kernel #####')\n",
+    "print(classification_report(np.argmax(langTest, axis=1)+1, clf.predict(flagsTest)), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "cf17e0a2",
    "metadata": {},
    "outputs": [
     {
@@ -15808,11 +15995,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "49e11e5c",
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "37faf295",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##### SVC with linear kernel #####\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.67      0.80         9\n",
+      "           1       0.92      0.92      0.92        13\n",
+      "           2       0.80      1.00      0.89         4\n",
+      "           3       1.00      1.00      1.00         1\n",
+      "           4       1.00      1.00      1.00         1\n",
+      "           5       0.71      0.83      0.77         6\n",
+      "           6       0.83      1.00      0.91         5\n",
+      "\n",
+      "    accuracy                           0.87        39\n",
+      "   macro avg       0.90      0.92      0.90        39\n",
+      "weighted avg       0.89      0.87      0.87        39\n",
+      " \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "## We can then explore the relationship between sub variables such as topleft & mainhue "
+    "print('##### SVC with linear kernel #####')\n",
+    "print(classification_report(np.argmax(rlgnTest, axis=1), clf.predict(flagsTest)), '\\n')"
    ]
   }
  ],
