+ new decision tree

--- a/variable histograms+chi-square value.ipynb
+++ b/variable histograms+chi-square value.ipynb
@@ -945,7 +945,7 @@
    "source": [
     "flagsOut = flagsOut.drop('Area', axis = 1)\n",
     "flagsOut = flagsOut.drop('Population', axis = 1)\n",
-    "np.argmax(rlgnTest, axis=1)"
+    "flagsScaled = scaler.fit_transform(flagsOut)"
    ]
   },
   {
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "345aeecb",
+   "id": "c7b49857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5287af22",
+   "id": "dfc833d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ee6bac9d",
+   "id": "b4b12070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "d8628e7d",
+   "id": "4107ee59",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39477d77",
+   "id": "5ea89af1",
    "metadata": {},
    "source": [
     "## Top5 features related to Landmass: 14, 36, 1, 31, 0"
@@ -1318,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "bb759a94",
+   "id": "2b41f7b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "c763d99e",
+   "id": "f7dae27f",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c927aeb",
+   "id": "01118e3e",
    "metadata": {},
    "source": [
     "## Top5 features related to Language: 14, 0, 1, 27, 12"
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "c0c648bf",
+   "id": "804ecf13",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50bc745",
+   "id": "cd6b0b7a",
    "metadata": {},
    "source": [
     "## Top5 features related to Religion: 14, 11, 1, 12, 15"
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "624a5c6d",
+   "id": "7ef51004",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ad87e29",
+   "id": "64e4e3de",
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "88d44707",
+   "id": "4012479c",
    "metadata": {},
    "outputs": [
     {
@@ -15796,8 +15796,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "393cd63c",
+   "execution_count": 309,
+   "id": "4f296a07",
    "metadata": {},
    "outputs": [
     {
@@ -15830,20 +15830,20 @@
     "#Same as using ovo\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "clf = SVC(kernel='linear')\n",
+    "clf_1 = SVC(kernel='linear')\n",
     "\n",
     "scaler.fit(flagsOut)\n",
     "\n",
-    "clf.fit(scaler.transform(flagsOut), np.asarray(flags['Landmass']))\n",
+    "clf_1.fit(scaler.transform(flagsOut), np.asarray(flags['Landmass']))\n",
     "\n",
     "print('##### SVC with linear kernel #####')\n",
-    "print(classification_report(flags['Landmass'], clf.predict(scaler.transform(flagsOut))), '\\n')"
+    "print(classification_report(flags['Landmass'], clf_1.predict(scaler.transform(flagsOut))), '\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "25697f1a",
+   "id": "659d5bca",
    "metadata": {},
    "outputs": [
     {
@@ -15875,8 +15875,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "7301c729",
+   "execution_count": 310,
+   "id": "0a48f4ad",
    "metadata": {},
    "outputs": [
     {
@@ -15907,20 +15907,20 @@
    "source": [
     "scaler = StandardScaler()\n",
     "\n",
-    "clf = SVC(kernel='linear')\n",
+    "clf_2 = SVC(kernel='linear')\n",
     "\n",
     "scaler.fit(flagsOut)\n",
     "\n",
-    "clf.fit(scaler.transform(flagsOut), np.asarray(flags['Language']))\n",
+    "clf_2.fit(scaler.transform(flagsOut), np.asarray(flags['Language']))\n",
     "\n",
     "print('##### SVC with linear kernel #####')\n",
-    "print(classification_report(flags['Language'], clf.predict(scaler.transform(flagsOut))))"
+    "print(classification_report(flags['Language'], clf_2.predict(scaler.transform(flagsOut))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "5cc8c008",
+   "id": "e661218e",
    "metadata": {},
    "outputs": [
     {
@@ -15954,8 +15954,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "cf17e0a2",
+   "execution_count": 311,
+   "id": "2ec408a7",
    "metadata": {},
    "outputs": [
     {
@@ -15984,20 +15984,20 @@
    "source": [
     "scaler = StandardScaler()\n",
     "\n",
-    "clf = SVC(kernel='linear')\n",
+    "clf_3 = SVC(kernel='linear')\n",
     "\n",
     "scaler.fit(flagsOut)\n",
     "\n",
-    "clf.fit(scaler.transform(flagsOut), np.asarray(flags['Religion']))\n",
+    "clf_3.fit(scaler.transform(flagsOut), np.asarray(flags['Religion']))\n",
     "\n",
     "print('##### SVC with linear kernel #####')\n",
-    "print(classification_report(flags['Religion'], clf.predict(scaler.transform(flagsOut))))"
+    "print(classification_report(flags['Religion'], clf_3.predict(scaler.transform(flagsOut))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "37faf295",
+   "execution_count": 295,
+   "id": "77e21fde",
    "metadata": {},
    "outputs": [
     {
@@ -16026,6 +16026,141 @@
    "source": [
     "print('##### SVC with linear kernel #####')\n",
     "print(classification_report(np.argmax(rlgnTest, axis=1), clf.predict(flagsTest)), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "43b9c1b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.5897435897435898\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.54      0.78      0.64         9\n",
+      "           1       0.25      0.50      0.33         2\n",
+      "           2       0.67      0.44      0.53         9\n",
+      "           3       1.00      0.64      0.78        11\n",
+      "           4       0.29      0.50      0.36         4\n",
+      "           5       1.00      0.50      0.67         4\n",
+      "\n",
+      "   micro avg       0.59      0.59      0.59        39\n",
+      "   macro avg       0.62      0.56      0.55        39\n",
+      "weighted avg       0.70      0.59      0.61        39\n",
+      " samples avg       0.59      0.59      0.59        39\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[7 1 1 0 0 0]\n",
+      " [1 1 0 0 0 0]\n",
+      " [2 0 4 0 3 0]\n",
+      " [1 1 1 7 1 0]\n",
+      " [1 1 0 0 2 0]\n",
+      " [1 0 0 0 1 2]]\n",
+      "Accuracy:  0.6153846153846154\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.92      0.81        12\n",
+      "           1       1.00      0.50      0.67         4\n",
+      "           2       0.00      0.00      0.00         2\n",
+      "           3       0.00      0.00      0.00         1\n",
+      "           4       1.00      0.33      0.50         3\n",
+      "           5       0.80      0.67      0.73         6\n",
+      "           6       0.00      0.00      0.00         0\n",
+      "           7       0.00      0.00      0.00         2\n",
+      "           8       0.00      0.00      0.00         0\n",
+      "           9       0.46      0.67      0.55         9\n",
+      "\n",
+      "   micro avg       0.62      0.62      0.62        39\n",
+      "   macro avg       0.40      0.31      0.33        39\n",
+      "weighted avg       0.63      0.62      0.60        39\n",
+      " samples avg       0.62      0.62      0.62        39\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[11  0  0  0  0  0  0  0  1]\n",
+      " [ 1  2  0  0  0  0  0  0  1]\n",
+      " [ 0  0  0  0  0  0  1  0  1]\n",
+      " [ 1  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  1  0  0  1]\n",
+      " [ 0  0  0  0  0  4  0  1  1]\n",
+      " [ 0  0  0  0  0  0  0  0  2]\n",
+      " [ 0  0  0  0  0  0  0  0  0]\n",
+      " [ 2  0  0  0  0  0  1  0  6]]\n",
+      "Accuracy:  0.7948717948717948\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.67      0.80         9\n",
+      "           1       0.76      1.00      0.87        13\n",
+      "           2       0.67      1.00      0.80         4\n",
+      "           3       0.50      1.00      0.67         1\n",
+      "           4       0.00      0.00      0.00         1\n",
+      "           5       1.00      0.50      0.67         6\n",
+      "           6       0.80      0.80      0.80         5\n",
+      "           7       0.00      0.00      0.00         0\n",
+      "\n",
+      "   micro avg       0.79      0.79      0.79        39\n",
+      "   macro avg       0.59      0.62      0.57        39\n",
+      "weighted avg       0.82      0.79      0.78        39\n",
+      " samples avg       0.79      0.79      0.79        39\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[ 6  2  0  0  0  0  1]\n",
+      " [ 0 13  0  0  0  0  0]\n",
+      " [ 0  0  4  0  0  0  0]\n",
+      " [ 0  0  0  1  0  0  0]\n",
+      " [ 0  0  1  0  0  0  0]\n",
+      " [ 0  1  1  1  0  3  0]\n",
+      " [ 0  1  0  0  0  0  4]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1327: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1327: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1327: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/louiseli/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1327: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#decision tree training whole dataset\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "tree_model = DecisionTreeClassifier().fit(flagsOut, land)\n",
+    "tree_pred = tree_model.predict(flagsTest)\n",
+    "print(\"Accuracy: \", accuracy_score(landTest, tree_pred))\n",
+    "print(\"Classification Report: \\n\", classification_report(landTest, tree_pred))\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(np.argmax(landTest, axis=1), np.argmax(tree_pred, axis=1)))\n",
+    "tree_model = DecisionTreeClassifier().fit(flagsOut, lang)\n",
+    "tree_pred = tree_model.predict(flagsTest)\n",
+    "print(\"Accuracy: \", accuracy_score(langTest, tree_pred))\n",
+    "print(\"Classification Report: \\n\", classification_report(langTest, tree_pred))\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(np.argmax(langTest, axis=1), np.argmax(tree_pred, axis=1)))\n",
+    "tree_model = DecisionTreeClassifier().fit(flagsOut, rlgn)\n",
+    "tree_pred = tree_model.predict(flagsTest)\n",
+    "print(\"Accuracy: \", accuracy_score(rlgnTest, tree_pred))\n",
+    "print(\"Classification Report: \\n\", classification_report(rlgnTest, tree_pred))\n",
+    "print(\"Confusion Matrix: \\n\", confusion_matrix(np.argmax(rlgnTest, axis=1), np.argmax(tree_pred, axis=1)))"
    ]
   }
  ],
